# Energy-Trading-Agents

./: .gitignore  README.md  pyproject.toml
Docs/: DEMO_GUIDE.md
data/demo_logs/: simulation_log.csv
notebooks/: EDA.ipynb  modelComparison.ipynb  modelTuning.ipynb  pre-processing.ipynb
openspec/changes/archive/2026-03-27-use-forecaster-models/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-use-forecaster-models/specs/compare-models/: spec.md
openspec/changes/archive/2026-03-27-use-forecaster-models/specs/forecaster-inference/: spec.md
openspec/changes/use-forecaster-models/: tasks.md
scripts/: compute_metrics.py  generate_dataset.py  preprocess_data.py  quick_predict.py  run_simulation.py  start_demo.sh  train_and_compare_models.py  train_demo_agent.py
src/: config.py  main.py
src/agent/: ppo_model.py
src/api/: routes.py  schemas.py
src/demo/: dashboard.py  data_provider.py
src/envs/: energy_trading_env.py
src/forecaster/data_generation/: __init__.py  config.py  energy_load_generator.py  load_factors.py  solar_model.py  tracking.py  writer.py
src/forecaster/modeling/: compare_models.py  cv_plots.py  inference.py  metrics.py  model_definitions.py  train_model.py  tune_model.py
src/forecaster/preprocessing/: cleaning.py  dataset_loader.py  feature_engineering.py  preprocess.py  segmentation.py
tests/: test_agent.py  test_api.py  test_data_provider.py  test_env.py  test_inference.py
