[project]
name = "energy-load-forecasting"
version = "0.1.0"
description = "Generalized ML Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0+cu130",
    "torchvision==0.25.0+cu130",
    "numpy",
    "accelerate>=1.12.0",
    "spacy>=3.8.11",
    "scikit-learn>=1.8.0",
    "pandas>=2.2.0,<3",
    "opencv-python>=4.13.0.92",
    "timm>=1.0.24",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.3",
    "rich>=13.0.0,<14",
    "opentelemetry-api>=1.39.1",
    "setuptools>=82.0.0",
    "cupy-cuda13x>=13.6.0",
    "ninja>=1.13.0",
    "flash-attn ; python_full_version == '3.12.*' and sys_platform == 'linux'",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
    "en-core-web-sm",
    "transformers>=5.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "gymnasium>=1.2.3",
    "stable-baselines3>=2.7.1",
    "streamlit>=1.42.0",
    "plotly>=6.6.0",
    "pytz>=2026.1.post1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.16/flash_attn-2.8.3+cu130torch2.10-cp312-cp312-linux_x86_64.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "D", "I"]
ignore = ["E501", "D100", "D104", "D107", "D203", "D205", "D212", "D401", "D415", "D400", "D417", "D106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
